examples/v0.5/errors/scope_access_outside_block.nova
if true {

    message: S = "Hello"

}

print(message)

// Expected Error:
// Variable 'message' is not declared.